# parallel-encryptor

./: .gitignore  CMakeLists.txt  README.md  main.cpp  script.py
app/: main.cpp
app/Crypter/: Crypter.cpp  Crypter.hpp
app/FileScanner/: FileScanner.cpp  FileScanner.hpp
app/Tasks/: Task.cpp  Task.hpp  TaskQueue.cpp  TaskQueue.hpp
test/: test_crypter.cpp  test_filescanner.cpp  test_tasks.cpp
